[gd_scene load_steps=13 format=3 uid="uid://c3743b7haxrux"]

[ext_resource type="Script" path="res://Scripts/casino.gd" id="1_2k6it"]
[ext_resource type="Texture2D" uid="uid://bcrsq7ommq5pu" path="res://Assets/random_photos/abstract-blur-defocused-hotel-lobby-600nw-2340724233.webp" id="1_xye6o"]
[ext_resource type="Texture2D" uid="uid://df83khsg3ugbw" path="res://Assets/random_photos/pngegg.png" id="3_w23f4"]
[ext_resource type="Texture2D" uid="uid://hv25jht77dxo" path="res://Assets/random_photos/Slots-Image.png" id="4_ww15t"]
[ext_resource type="Texture2D" uid="uid://bj4didv6i2ruu" path="res://Assets/random_photos/Ckucky-Boxer-Artwork_Red_Web.webp" id="5_a66yx"]
[ext_resource type="AudioStream" uid="uid://cmhknr47m7h23" path="res://Audio/Casino/Ambient/321Jazz - Hey Taxi [ Cafe Jazz Music 2020 ].mp3" id="6_53raj"]
[ext_resource type="FontFile" uid="uid://c4c4re1prp0j5" path="res://Assets/Fonts/Summer Break.otf" id="6_dpbch"]
[ext_resource type="AudioStream" uid="uid://bqhk41ptyrw6v" path="res://Audio/Casino/Ambient/Sound Effect - Crowd - Talking outside.mp3" id="6_kgahp"]
[ext_resource type="Script" path="res://Scripts/casino_camera.gd" id="8_atk4w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8vb80"]
bg_color = Color(0, 0.0435884, 0.154745, 0.956863)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="LabelSettings" id="LabelSettings_lhxm5"]
font = ExtResource("6_dpbch")
font_size = 75

[sub_resource type="LabelSettings" id="LabelSettings_gksvj"]
font_size = 35
font_color = Color(0.629156, 0.00031439, 0.635246, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="casino" type="Node2D"]
script = ExtResource("1_2k6it")

[node name="Abstract-blur-defocused-hotel-lobby-600Nw-2340724233" type="Sprite2D" parent="."]
position = Vector2(581, 324)
scale = Vector2(1.94167, 1.90452)
texture = ExtResource("1_xye6o")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="UI"]
layout_mode = 0
offset_left = 92.0
offset_top = 141.0
offset_right = 336.0
offset_bottom = 517.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8vb80")

[node name="HorseMinigame" type="Button" parent="UI/Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 43.0
offset_right = 235.0
offset_bottom = 284.0
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
icon = ExtResource("3_w23f4")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Panel2" type="Panel" parent="UI"]
layout_mode = 0
offset_left = 350.0
offset_top = 141.0
offset_right = 594.0
offset_bottom = 517.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8vb80")

[node name="SlotsMinigame" type="Button" parent="UI/Panel2"]
layout_mode = 0
offset_left = 7.0
offset_top = 86.0
offset_right = 237.0
offset_bottom = 327.0
icon = ExtResource("4_ww15t")
flat = true
expand_icon = true

[node name="Panel3" type="Panel" parent="UI"]
layout_mode = 0
offset_left = 610.0
offset_top = 141.0
offset_right = 854.0
offset_bottom = 517.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8vb80")

[node name="ChickenMinigame" type="Button" parent="UI/Panel3"]
layout_mode = 0
offset_left = 7.0
offset_top = 86.0
offset_right = 237.0
offset_bottom = 327.0
icon = ExtResource("5_a66yx")
flat = true
expand_icon = true

[node name="Exit" type="Button" parent="UI"]
layout_mode = 0
offset_left = 953.0
offset_top = 570.0
offset_right = 1129.0
offset_bottom = 633.0
theme_override_font_sizes/font_size = 40
text = "Exit"

[node name="Earnings" type="Label" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 567.0
offset_right = 466.0
offset_bottom = 643.0
text = "earnings: $"
label_settings = SubResource("LabelSettings_lhxm5")
vertical_alignment = 1

[node name="Panel4" type="Panel" parent="UI"]
visible = false
layout_mode = 0
offset_left = 117.0
offset_top = 102.0
offset_right = 894.0
offset_bottom = 534.0

[node name="Label" type="Label" parent="UI/Panel4"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.027
offset_left = 180.0
offset_top = 106.0
offset_right = 521.0
offset_bottom = 265.336
label_settings = SubResource("LabelSettings_gksvj")

[node name="Audio" type="Node2D" parent="."]

[node name="Background" type="Node2D" parent="Audio"]

[node name="crowd" type="AudioStreamPlayer2D" parent="Audio/Background"]
stream = ExtResource("6_kgahp")
autoplay = true

[node name="casino_jazz" type="AudioStreamPlayer2D" parent="Audio/Background"]
stream = ExtResource("6_53raj")

[node name="casino_camera" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("8_atk4w")

[connection signal="pressed" from="UI/Panel/HorseMinigame" to="." method="_on_horse_minigame_pressed"]
[connection signal="pressed" from="UI/Panel2/SlotsMinigame" to="." method="_on_slots_minigame_pressed"]
[connection signal="pressed" from="UI/Panel3/ChickenMinigame" to="." method="_on_chicken_minigame_pressed"]
[connection signal="pressed" from="UI/Exit" to="." method="_on_exit_pressed"]
